# fCore_toolchain

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conan_cross_profile  conanfile.txt  cross_toolchain.cmake  isa_decoder.ods  setup.py  vcpkg.json
include/fs_parser/: CMakeLists.txt  fs_grammar.interp  fs_grammar.tokens  fs_grammarBaseListener.cpp  fs_grammarBaseListener.h  fs_grammarBaseVisitor.cpp  fs_grammarBaseVisitor.h  fs_grammarLexer.cpp  fs_grammarLexer.h  fs_grammarLexer.interp  fs_grammarLexer.tokens  fs_grammarListener.cpp  fs_grammarListener.h  fs_grammarParser.cpp  fs_grammarParser.h  fs_grammarVisitor.cpp  fs_grammarVisitor.h
includes/asm_parser/: CMakeLists.txt  asm_grammar.interp  asm_grammar.tokens  asm_grammarBaseListener.cpp  asm_grammarBaseListener.h  asm_grammarBaseVisitor.cpp  asm_grammarBaseVisitor.h  asm_grammarLexer.cpp  asm_grammarLexer.h  asm_grammarLexer.interp  asm_grammarLexer.tokens  asm_grammarListener.cpp  asm_grammarListener.h  asm_grammarParser.cpp  asm_grammarParser.h  asm_grammarVisitor.cpp  asm_grammarVisitor.h
src/: AST_visitor.cpp  AST_visitor.hpp  CMakeLists.txt  Tree_visitor.cpp  Tree_visitor.hpp  code_element.cpp  code_element.hpp  fCore_dev_server.cpp  fcore_cc.cpp  fcore_cc_main.cpp  fcore_dis.cpp  fcore_dis_main.cpp  fcore_emu.cpp  fcore_emu_main.cpp  fcore_has.cpp  fcore_has.hpp  fcore_has_main.cpp  file_parser.cpp  file_parser.h  fs_grammar.g4  immediate_instruction.cpp  independent_instruction.hpp  instruction.cpp  main.cpp  output_writer.cpp  output_writer.hpp  register_operating_instruction.h
src/ast/: define.cpp  variable.cpp
src/backend/: assembly_generator.cpp  binary_generator.cpp  emulator.cpp  emulator_builder.cpp  output_generator.cpp  output_generator.hpp  output_writer.cpp  output_writer.hpp
src/code_elements/: code_element.cpp  code_element.hpp  define.cpp  for_loop.cpp  for_loop.hpp  independent_instruction.cpp  instruction.cpp  instruction.h  ll_ast_node.cpp  register_operating_instruction.cpp  variable.cpp  variable.hpp
src/data_structures/: constants_tracker.cpp  executable.cpp  instruction_stream.cpp
src/dev_server/: rest_handler.cpp
src/emulator/: ba_executor.cpp  emulation_sequencer.cpp  emulator.cpp  emulator_builder.cpp  emulator_dispatcher.cpp  emulator_manager.cpp  emulator_runner.cpp  gp_executor.cpp  interconnect_manager.cpp  multirate_io_repeater.cpp
src/frontend/: C_grammar.g4  ErrorHandling.cpp  ErrorHandling.hpp  Tree_visitor.cpp  Tree_visitor.hpp  asm_grammar.g4  binary_loader.cpp  code_element.cpp  code_element.hpp  define_map.cpp  disassembler.cpp  emulator_manager.cpp  emulator_schema_validator.cpp  file_parser.cpp  file_parser.h  fs_grammar.g4  immediate_instruction.h  instruction.h  register_map.cpp  register_map.hpp  syntaxHighlight.ace  syntaxHighlight.tmLanguage  variable_map.cpp  variable_map.hpp
src/instrumentation/: instrumentation_core.cpp
src/passes/: Variable_lifetime_mapping.cpp  Variable_lifetime_mapping.hpp  float_const_implementation.cpp  float_const_implementation.hpp  instruction_counting_pass.cpp  instruction_counting_pass.hpp  load_intercalation_pass.cpp  load_intercalation_pass.hpp  loop_implementation_pass.cpp  loop_implementation_pass.hpp  pass_manager.cpp  pass_manager.hpp  passes.hpp  pseudo_instructions_pass.cpp  pseudo_instructions_pass.hpp  register_allocation_pass.cpp  register_allocation_pass.hpp  variable_lifetime_mapping.cpp  variable_lifetime_mapping.hpp
src/tools/: array_linearizer.cpp  define.cpp  define_map.cpp  expression_evaluator.cpp  high_level_ast_lowering.cpp  instruction_stream_builder.cpp  register_map.cpp  variable.cpp  variable_map.cpp
test/: CMakeLists.txt  C_frontend.cpp  C_preprocessor.cpp  C_tree_visitor.cpp  C_tree_visitor_testing.cpp  Instruction_classes.cpp  deep_copy.cpp  disassembler_testing.cpp  emulator_execution.cpp  emulator_schema_validation.cpp  emulator_testing.cpp  end_to_end.cpp  end_to_end_C.cpp  end_to_end_asm.cpp  hl_passes.cpp  hl_pretty_print.cpp  length_analysis.cpp  ll_passes.cpp  loop_impl_pass.cpp  passes.cpp  test.cpp  test_add.s.hex  test_add.s.mem  test_for.s  test_for.s.hex  test_for.s.mem  testing_main.cpp
test/C_files/: test_additive_expressions.c  test_andb_expressions.c  test_assignment_expressions.c  test_division_implementation.c  test_full_conditional.c  test_full_loop.c  test_function_call.c  test_function_inlining.c  test_intrinsics_implementation.c  test_loop_unrolling_pass.c  test_main_add.c  test_multiplicative_Expressions.c  test_normalization.c  test_orb_expressions.c  test_pragma_io.c  test_preproc.c  test_preproc_comments.c  test_preproc_define.c  test_preproc_include.c  test_preproc_pragmas.c  test_shift_expressions.c
test/asm_files/: register_defs.s  test_add.hex  test_add.s  test_branch.s  test_float_const.s  test_for.s  test_global.s  test_ldc.s  test_ldc_fail.s  test_ldc_int.s  test_loop_p.s  test_sogi.s  test_variables.s
test/data_model/: Instruction_classes.cpp  hl_ast_expression.cpp
test/disassembler_files/: test_add.hex  test_add.mem  test_error.mem
test/emulator/: bus_allocation.cpp  bus_deployment_interface.cpp  emulator_execution.cpp  emulator_manager_bulk.cpp  emulator_manager_interactive.cpp  emulator_manager_v2.cpp  emulator_runner.cpp  emulator_schema_validation.cpp  emulator_test_helpers.hpp  emulator_testing.cpp  waveform_generator.cpp
test/emulator_files/: resp.s  test.s  test_add.mem  test_and.mem  test_ble.mem  test_bset.s  test_compilation.json  test_compilation_interconnect.json  test_compilation_memory.json  test_dis.s  test_efi.mem  test_efi.s  test_inputs.csv  test_inputs.mem  test_inputs_spec.json  test_interconnect.mem  test_interconnect.s  test_interconnect_spec.json  test_itf.mem  test_mul.mem  test_not.mem  test_or.mem  test_satn.mem  test_spec.json  test_sub.mem
test/includes/: catch.hpp
test/passes/: hl_passes.cpp  instruction_stream_pass.cpp  pipeline_hazards.cpp  semantic_analysis.cpp  type_checking.cpp
test/schemas/: msgpackd_schema.json  msgpackd_schema_fail.json  valid_compiler_schema.json  valid_emulator_schema.json  (+1 more)
(+864 files in other folders)
